--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -2,6 +2,11 @@
   border: 1px solid purple;
 }*/
 
+body {
+  padding-top: 0;
+  margin-top: 0;
+}
+
 .header {
   display: flex;
   align-items: center;
@@ -14,6 +19,7 @@
   font-family: Verdana;
   font-size: 14px;
   font-weight: bold;
+
 }
 
 .logo {
